examples/test/testpolicy14258.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14258
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key48: value24
      key10: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value12
          key24: value37
      podSelector:
        matchLabels:
          key41: value10
